--- a/style.css
+++ b/style.css
@@ -242,11 +242,11 @@ section {
 /* Project Section 2 */
 .project-section2 {
     background-color: #FFFFFF;
-}
-.project-section2 {
     display: flex;
-    align-items: center; /* Aligns content vertically */
-    justify-content: space-between; /* Distributes space between image and content */
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    text-align: justify;
 }
 
 .project-image2 {
@@ -255,17 +255,16 @@ section {
     justify-content: center;
     margin-bottom: 20px;
 }
-
 .project-image2 img {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 }
 .project-content2 p {
     text-align: justify;
     color: #000;
-    text-align: center;
     max-width: 600px;
 }
 
@@ -277,6 +276,7 @@ section {
 }
 /* Button */
 button {
+    margin: 1rem auto;
     margin-top: 1rem;
     padding: 10px 20px;
     background: #007bff;
